# StellarPaypal

./: .gitignore  README.md  package-lock.json
backend/: package.json
client/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/api/tx/: route.ts
client/src/app/api/wallet/: route.ts
client/src/app/dashboard/: layout.tsx  page.tsx
client/src/app/dashboard/interest/: page.tsx
client/src/app/dashboard/send-request/: page.tsx
client/src/app/dashboard/settings/: page.tsx
client/src/app/dashboard/transactions/: page.tsx
client/src/app/dashboard/wallet/: page.tsx
client/src/app/passkey-test/: page.tsx
client/src/app/signup/: page.tsx
client/src/app/test/: page.tsx  submit-tx.tsx
client/src/components/: sidebar.tsx  transaction-feed.tsx
client/src/lib/: README.md  blockchain-data.ts  client.ts  passkey-wallet.ts  passkey.ts  soroban.ts  wallet-auth.ts
contracts/mosaic-passkeys-new/: Cargo.toml  README.md
contracts/mosaic-passkeys-new/contracts/smart-wallet/: Cargo.toml
contracts/mosaic-passkeys-new/contracts/smart-wallet/src/: base64_url.rs  lib.rs
contracts/mosaic-passkeys-new/contracts/wallet-factory/: Cargo.toml
contracts/mosaic-passkeys-new/contracts/wallet-factory/src/: lib.rs
