[package]
name = "smart-wallet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5.1", default-features = false }
